--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.1.0
   shared_preferences: ^2.2.2
   dio: ^5.3.3
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
