--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.2.2
   dio: ^5.3.3
   flutter_svg: ^2.0.9
+  input_quantity: ^2.2.0
 
 dev_dependencies:
   flutter_test:
