--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dio: ^5.3.3
   flutter_svg: ^2.0.9
   input_quantity: ^2.2.0
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
