--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   flutter_svg: ^2.0.9
   input_quantity: ^2.2.0
   dotted_border: ^2.1.0
+  razorpay_flutter: ^1.3.5
+  fluttertoast: ^8.2.4
+  dartz: ^0.10.1
+  freezed: ^2.4.5
 
 dev_dependencies:
   flutter_test:
