--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 2.1.0+1
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -38,7 +38,7 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_bloc: ^8.1.3
   bloc: ^8.1.2
-  http: ^1.1.0
+  http: ^1.1.2
   shared_preferences: ^2.2.2
   dio: ^5.3.3
   flutter_svg: ^2.0.9
@@ -48,9 +48,10 @@ dependencies:
   fluttertoast: ^8.2.4
   dartz: ^0.10.1
   freezed: ^2.4.5
-  intl: ^0.18.1
+  intl: ^0.19.0
   order_tracker_zen: ^1.0.0+4
   casa_vertical_stepper: ^0.0.5
+  change_app_package_name: ^1.1.0
   
 
 dev_dependencies:
@@ -62,7 +63,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
